# MOSS-Audio

./: .gitignore  README.md  README_zh.md  infer.py  package.json  pyproject.toml  script.js  styles.css
assets/: metadata.jsonl
assets/audio/: 吴京1.m4a
demo/: index.html  script.js  styles.css
demo/assets/: metadata.jsonl
src/: hf_inference.py  modeling_moss_audio.py
